syntax = "proto3";

package aperture.policy.wrappers.v1;

import "aperture/policy/language/v1/classifier.proto";
import "aperture/policy/language/v1/fluxmeter.proto";
import "aperture/policy/language/v1/policy.proto";
import "aperture/policy/wrappers/v1/common.proto";

message PolicyWrapper {
  // CommonAttributes
  policy.wrappers.v1.CommonAttributes common_attributes = 1;
  // Policy
  policy.language.v1.Policy policy = 2;
}

message PolicyWrappers {
  map<string, PolicyWrapper> policy_wrappers = 1;
}

message FluxMeterWrapper {
  // Flux Meter
  policy.language.v1.FluxMeter flux_meter = 1;
  // Name of Flux Meter metric.
  string flux_meter_name = 4;
}

message ClassifierWrapper {
  // CommonAttributes
  policy.wrappers.v1.CommonAttributes common_attributes = 1;
  // Classifier
  policy.language.v1.Classifier classifier = 2;
}

message ConcurrencyLimiterWrapper {
  // CommonAttributes
  policy.wrappers.v1.CommonAttributes common_attributes = 1;
  // Concurrency Limiter
  policy.language.v1.ConcurrencyLimiter concurrency_limiter = 2;
}

message RateLimiterWrapper {
  // CommonAttributes
  policy.wrappers.v1.CommonAttributes common_attributes = 1;
  // Rate Limiter
  policy.language.v1.RateLimiter rate_limiter = 2;
}
